python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt_list stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> simple_stmt
Rule 5     stmt -> compound_stmt
Rule 6     compound_stmt -> if_stmt
Rule 7     compound_stmt -> while_stmt
Rule 8     compound_stmt -> print
Rule 9     simple_stmt -> small_stmt SEMICOLON
Rule 10    small_stmt -> test
Rule 11    small_stmt -> flow_stmt
Rule 12    print -> PRINT LPAREN small_stmt RPAREN SEMICOLON
Rule 13    flow_stmt -> RETURN
Rule 14    flow_stmt -> BREAK
Rule 15    flow_stmt -> CONTINUE
Rule 16    while_stmt -> WHILE test COLON suite
Rule 17    while_stmt -> WHILE test COLON suite ELSE COLON suite
Rule 18    if_stmt -> IF test COLON suite
Rule 19    if_stmt -> IF test COLON suite ELSE COLON suite
Rule 20    suite -> simple_stmt
Rule 21    suite -> LBRACK stmt_list RBRACK
Rule 22    test -> comparison OR test
Rule 23    test -> comparison AND test
Rule 24    test -> comparison
Rule 25    comparison -> expr GT expr
Rule 26    comparison -> expr LT expr
Rule 27    comparison -> expr GTE expr
Rule 28    comparison -> expr LTE expr
Rule 29    comparison -> expr EQ expr
Rule 30    comparison -> expr NEQ expr
Rule 31    comparison -> expr
Rule 32    expr -> NAME ASSIGN expr
Rule 33    expr -> expr PLUS expr
Rule 34    expr -> expr MINUS expr
Rule 35    expr -> expr TIMES expr
Rule 36    expr -> expr DIVIDE expr
Rule 37    expr -> expr MOD expr
Rule 38    expr -> factor
Rule 39    factor -> PLUS factor
Rule 40    factor -> MINUS factor
Rule 41    factor -> atom_expr
Rule 42    atom_expr -> atom
Rule 43    atom -> LPAREN list_expr RPAREN
Rule 44    atom -> LSQBRACK list_expr RSQBRACK
Rule 45    atom -> name
Rule 46    atom -> number
Rule 47    atom -> string
Rule 48    atom -> TRUE
Rule 49    atom -> FALSE
Rule 50    atom -> NONE
Rule 51    list_expr -> list_expr COMMA atom_expr
Rule 52    list_expr -> atom_expr
Rule 53    name -> NAME
Rule 54    number -> INT
Rule 55    number -> FLOAT
Rule 56    string -> STRING

Terminals, with rules where they appear

AND                  : 23
ASSIGN               : 32
BREAK                : 14
COLON                : 16 17 17 18 19 19
COMMA                : 51
CONTINUE             : 15
DIVIDE               : 36
ELSE                 : 17 19
EQ                   : 29
FALSE                : 49
FLOAT                : 55
GT                   : 25
GTE                  : 27
IF                   : 18 19
INT                  : 54
LBRACK               : 21
LPAREN               : 12 43
LSQBRACK             : 44
LT                   : 26
LTE                  : 28
MINUS                : 34 40
MOD                  : 37
NAME                 : 32 53
NEQ                  : 30
NONE                 : 50
OR                   : 22
PLUS                 : 33 39
PRINT                : 12
RBRACK               : 21
RETURN               : 13
RPAREN               : 12 43
RSQBRACK             : 44
SEMICOLON            : 9 12
STRING               : 56
TIMES                : 35
TRUE                 : 48
WHILE                : 16 17
error                : 

Nonterminals, with rules where they appear

atom                 : 42
atom_expr            : 41 51 52
comparison           : 22 23 24
compound_stmt        : 5
expr                 : 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 33 34 34 35 35 36 36 37 37
factor               : 38 39 40
flow_stmt            : 11
if_stmt              : 6
list_expr            : 43 44 51
name                 : 45
number               : 46
print                : 8
program              : 0
simple_stmt          : 4 20
small_stmt           : 9 12
stmt                 : 2 3
stmt_list            : 1 2 21
string               : 47
suite                : 16 17 17 18 19 19
test                 : 10 16 17 18 19 22 23
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt_list stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (9) simple_stmt -> . small_stmt SEMICOLON
    (6) compound_stmt -> . if_stmt
    (7) compound_stmt -> . while_stmt
    (8) compound_stmt -> . print
    (10) small_stmt -> . test
    (11) small_stmt -> . flow_stmt
    (18) if_stmt -> . IF test COLON suite
    (19) if_stmt -> . IF test COLON suite ELSE COLON suite
    (16) while_stmt -> . WHILE test COLON suite
    (17) while_stmt -> . WHILE test COLON suite ELSE COLON suite
    (12) print -> . PRINT LPAREN small_stmt RPAREN SEMICOLON
    (22) test -> . comparison OR test
    (23) test -> . comparison AND test
    (24) test -> . comparison
    (13) flow_stmt -> . RETURN
    (14) flow_stmt -> . BREAK
    (15) flow_stmt -> . CONTINUE
    (25) comparison -> . expr GT expr
    (26) comparison -> . expr LT expr
    (27) comparison -> . expr GTE expr
    (28) comparison -> . expr LTE expr
    (29) comparison -> . expr EQ expr
    (30) comparison -> . expr NEQ expr
    (31) comparison -> . expr
    (32) expr -> . NAME ASSIGN expr
    (33) expr -> . expr PLUS expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr TIMES expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr MOD expr
    (38) expr -> . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    IF              shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14
    RETURN          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    NAME            shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 15
    LSQBRACK        shift and go to state 27
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NONE            shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    simple_stmt                    shift and go to state 4
    compound_stmt                  shift and go to state 5
    small_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8
    print                          shift and go to state 9
    test                           shift and go to state 10
    flow_stmt                      shift and go to state 11
    comparison                     shift and go to state 16
    expr                           shift and go to state 20
    factor                         shift and go to state 24
    atom_expr                      shift and go to state 25
    atom                           shift and go to state 26
    name                           shift and go to state 28
    number                         shift and go to state 29
    string                         shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (2) stmt_list -> stmt_list . stmt
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (9) simple_stmt -> . small_stmt SEMICOLON
    (6) compound_stmt -> . if_stmt
    (7) compound_stmt -> . while_stmt
    (8) compound_stmt -> . print
    (10) small_stmt -> . test
    (11) small_stmt -> . flow_stmt
    (18) if_stmt -> . IF test COLON suite
    (19) if_stmt -> . IF test COLON suite ELSE COLON suite
    (16) while_stmt -> . WHILE test COLON suite
    (17) while_stmt -> . WHILE test COLON suite ELSE COLON suite
    (12) print -> . PRINT LPAREN small_stmt RPAREN SEMICOLON
    (22) test -> . comparison OR test
    (23) test -> . comparison AND test
    (24) test -> . comparison
    (13) flow_stmt -> . RETURN
    (14) flow_stmt -> . BREAK
    (15) flow_stmt -> . CONTINUE
    (25) comparison -> . expr GT expr
    (26) comparison -> . expr LT expr
    (27) comparison -> . expr GTE expr
    (28) comparison -> . expr LTE expr
    (29) comparison -> . expr EQ expr
    (30) comparison -> . expr NEQ expr
    (31) comparison -> . expr
    (32) expr -> . NAME ASSIGN expr
    (33) expr -> . expr PLUS expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr TIMES expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr MOD expr
    (38) expr -> . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    $end            reduce using rule 1 (program -> stmt_list .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14
    RETURN          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    NAME            shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 15
    LSQBRACK        shift and go to state 27
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NONE            shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    stmt                           shift and go to state 37
    simple_stmt                    shift and go to state 4
    compound_stmt                  shift and go to state 5
    small_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8
    print                          shift and go to state 9
    test                           shift and go to state 10
    flow_stmt                      shift and go to state 11
    comparison                     shift and go to state 16
    expr                           shift and go to state 20
    factor                         shift and go to state 24
    atom_expr                      shift and go to state 25
    atom                           shift and go to state 26
    name                           shift and go to state 28
    number                         shift and go to state 29
    string                         shift and go to state 30

state 3

    (3) stmt_list -> stmt .

    IF              reduce using rule 3 (stmt_list -> stmt .)
    WHILE           reduce using rule 3 (stmt_list -> stmt .)
    PRINT           reduce using rule 3 (stmt_list -> stmt .)
    RETURN          reduce using rule 3 (stmt_list -> stmt .)
    BREAK           reduce using rule 3 (stmt_list -> stmt .)
    CONTINUE        reduce using rule 3 (stmt_list -> stmt .)
    NAME            reduce using rule 3 (stmt_list -> stmt .)
    PLUS            reduce using rule 3 (stmt_list -> stmt .)
    MINUS           reduce using rule 3 (stmt_list -> stmt .)
    LPAREN          reduce using rule 3 (stmt_list -> stmt .)
    LSQBRACK        reduce using rule 3 (stmt_list -> stmt .)
    TRUE            reduce using rule 3 (stmt_list -> stmt .)
    FALSE           reduce using rule 3 (stmt_list -> stmt .)
    NONE            reduce using rule 3 (stmt_list -> stmt .)
    INT             reduce using rule 3 (stmt_list -> stmt .)
    FLOAT           reduce using rule 3 (stmt_list -> stmt .)
    STRING          reduce using rule 3 (stmt_list -> stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt .)
    RBRACK          reduce using rule 3 (stmt_list -> stmt .)


state 4

    (4) stmt -> simple_stmt .

    IF              reduce using rule 4 (stmt -> simple_stmt .)
    WHILE           reduce using rule 4 (stmt -> simple_stmt .)
    PRINT           reduce using rule 4 (stmt -> simple_stmt .)
    RETURN          reduce using rule 4 (stmt -> simple_stmt .)
    BREAK           reduce using rule 4 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 4 (stmt -> simple_stmt .)
    NAME            reduce using rule 4 (stmt -> simple_stmt .)
    PLUS            reduce using rule 4 (stmt -> simple_stmt .)
    MINUS           reduce using rule 4 (stmt -> simple_stmt .)
    LPAREN          reduce using rule 4 (stmt -> simple_stmt .)
    LSQBRACK        reduce using rule 4 (stmt -> simple_stmt .)
    TRUE            reduce using rule 4 (stmt -> simple_stmt .)
    FALSE           reduce using rule 4 (stmt -> simple_stmt .)
    NONE            reduce using rule 4 (stmt -> simple_stmt .)
    INT             reduce using rule 4 (stmt -> simple_stmt .)
    FLOAT           reduce using rule 4 (stmt -> simple_stmt .)
    STRING          reduce using rule 4 (stmt -> simple_stmt .)
    $end            reduce using rule 4 (stmt -> simple_stmt .)
    RBRACK          reduce using rule 4 (stmt -> simple_stmt .)


state 5

    (5) stmt -> compound_stmt .

    IF              reduce using rule 5 (stmt -> compound_stmt .)
    WHILE           reduce using rule 5 (stmt -> compound_stmt .)
    PRINT           reduce using rule 5 (stmt -> compound_stmt .)
    RETURN          reduce using rule 5 (stmt -> compound_stmt .)
    BREAK           reduce using rule 5 (stmt -> compound_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> compound_stmt .)
    NAME            reduce using rule 5 (stmt -> compound_stmt .)
    PLUS            reduce using rule 5 (stmt -> compound_stmt .)
    MINUS           reduce using rule 5 (stmt -> compound_stmt .)
    LPAREN          reduce using rule 5 (stmt -> compound_stmt .)
    LSQBRACK        reduce using rule 5 (stmt -> compound_stmt .)
    TRUE            reduce using rule 5 (stmt -> compound_stmt .)
    FALSE           reduce using rule 5 (stmt -> compound_stmt .)
    NONE            reduce using rule 5 (stmt -> compound_stmt .)
    INT             reduce using rule 5 (stmt -> compound_stmt .)
    FLOAT           reduce using rule 5 (stmt -> compound_stmt .)
    STRING          reduce using rule 5 (stmt -> compound_stmt .)
    $end            reduce using rule 5 (stmt -> compound_stmt .)
    RBRACK          reduce using rule 5 (stmt -> compound_stmt .)


state 6

    (9) simple_stmt -> small_stmt . SEMICOLON

    SEMICOLON       shift and go to state 38


state 7

    (6) compound_stmt -> if_stmt .

    IF              reduce using rule 6 (compound_stmt -> if_stmt .)
    WHILE           reduce using rule 6 (compound_stmt -> if_stmt .)
    PRINT           reduce using rule 6 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 6 (compound_stmt -> if_stmt .)
    BREAK           reduce using rule 6 (compound_stmt -> if_stmt .)
    CONTINUE        reduce using rule 6 (compound_stmt -> if_stmt .)
    NAME            reduce using rule 6 (compound_stmt -> if_stmt .)
    PLUS            reduce using rule 6 (compound_stmt -> if_stmt .)
    MINUS           reduce using rule 6 (compound_stmt -> if_stmt .)
    LPAREN          reduce using rule 6 (compound_stmt -> if_stmt .)
    LSQBRACK        reduce using rule 6 (compound_stmt -> if_stmt .)
    TRUE            reduce using rule 6 (compound_stmt -> if_stmt .)
    FALSE           reduce using rule 6 (compound_stmt -> if_stmt .)
    NONE            reduce using rule 6 (compound_stmt -> if_stmt .)
    INT             reduce using rule 6 (compound_stmt -> if_stmt .)
    FLOAT           reduce using rule 6 (compound_stmt -> if_stmt .)
    STRING          reduce using rule 6 (compound_stmt -> if_stmt .)
    $end            reduce using rule 6 (compound_stmt -> if_stmt .)
    RBRACK          reduce using rule 6 (compound_stmt -> if_stmt .)


state 8

    (7) compound_stmt -> while_stmt .

    IF              reduce using rule 7 (compound_stmt -> while_stmt .)
    WHILE           reduce using rule 7 (compound_stmt -> while_stmt .)
    PRINT           reduce using rule 7 (compound_stmt -> while_stmt .)
    RETURN          reduce using rule 7 (compound_stmt -> while_stmt .)
    BREAK           reduce using rule 7 (compound_stmt -> while_stmt .)
    CONTINUE        reduce using rule 7 (compound_stmt -> while_stmt .)
    NAME            reduce using rule 7 (compound_stmt -> while_stmt .)
    PLUS            reduce using rule 7 (compound_stmt -> while_stmt .)
    MINUS           reduce using rule 7 (compound_stmt -> while_stmt .)
    LPAREN          reduce using rule 7 (compound_stmt -> while_stmt .)
    LSQBRACK        reduce using rule 7 (compound_stmt -> while_stmt .)
    TRUE            reduce using rule 7 (compound_stmt -> while_stmt .)
    FALSE           reduce using rule 7 (compound_stmt -> while_stmt .)
    NONE            reduce using rule 7 (compound_stmt -> while_stmt .)
    INT             reduce using rule 7 (compound_stmt -> while_stmt .)
    FLOAT           reduce using rule 7 (compound_stmt -> while_stmt .)
    STRING          reduce using rule 7 (compound_stmt -> while_stmt .)
    $end            reduce using rule 7 (compound_stmt -> while_stmt .)
    RBRACK          reduce using rule 7 (compound_stmt -> while_stmt .)


state 9

    (8) compound_stmt -> print .

    IF              reduce using rule 8 (compound_stmt -> print .)
    WHILE           reduce using rule 8 (compound_stmt -> print .)
    PRINT           reduce using rule 8 (compound_stmt -> print .)
    RETURN          reduce using rule 8 (compound_stmt -> print .)
    BREAK           reduce using rule 8 (compound_stmt -> print .)
    CONTINUE        reduce using rule 8 (compound_stmt -> print .)
    NAME            reduce using rule 8 (compound_stmt -> print .)
    PLUS            reduce using rule 8 (compound_stmt -> print .)
    MINUS           reduce using rule 8 (compound_stmt -> print .)
    LPAREN          reduce using rule 8 (compound_stmt -> print .)
    LSQBRACK        reduce using rule 8 (compound_stmt -> print .)
    TRUE            reduce using rule 8 (compound_stmt -> print .)
    FALSE           reduce using rule 8 (compound_stmt -> print .)
    NONE            reduce using rule 8 (compound_stmt -> print .)
    INT             reduce using rule 8 (compound_stmt -> print .)
    FLOAT           reduce using rule 8 (compound_stmt -> print .)
    STRING          reduce using rule 8 (compound_stmt -> print .)
    $end            reduce using rule 8 (compound_stmt -> print .)
    RBRACK          reduce using rule 8 (compound_stmt -> print .)


state 10

    (10) small_stmt -> test .

    SEMICOLON       reduce using rule 10 (small_stmt -> test .)
    RPAREN          reduce using rule 10 (small_stmt -> test .)


state 11

    (11) small_stmt -> flow_stmt .

    SEMICOLON       reduce using rule 11 (small_stmt -> flow_stmt .)
    RPAREN          reduce using rule 11 (small_stmt -> flow_stmt .)


state 12

    (18) if_stmt -> IF . test COLON suite
    (19) if_stmt -> IF . test COLON suite ELSE COLON suite
    (22) test -> . comparison OR test
    (23) test -> . comparison AND test
    (24) test -> . comparison
    (25) comparison -> . expr GT expr
    (26) comparison -> . expr LT expr
    (27) comparison -> . expr GTE expr
    (28) comparison -> . expr LTE expr
    (29) comparison -> . expr EQ expr
    (30) comparison -> . expr NEQ expr
    (31) comparison -> . expr
    (32) expr -> . NAME ASSIGN expr
    (33) expr -> . expr PLUS expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr TIMES expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr MOD expr
    (38) expr -> . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    NAME            shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 15
    LSQBRACK        shift and go to state 27
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NONE            shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    test                           shift and go to state 39
    comparison                     shift and go to state 16
    expr                           shift and go to state 20
    factor                         shift and go to state 24
    atom_expr                      shift and go to state 25
    atom                           shift and go to state 26
    name                           shift and go to state 28
    number                         shift and go to state 29
    string                         shift and go to state 30

state 13

    (16) while_stmt -> WHILE . test COLON suite
    (17) while_stmt -> WHILE . test COLON suite ELSE COLON suite
    (22) test -> . comparison OR test
    (23) test -> . comparison AND test
    (24) test -> . comparison
    (25) comparison -> . expr GT expr
    (26) comparison -> . expr LT expr
    (27) comparison -> . expr GTE expr
    (28) comparison -> . expr LTE expr
    (29) comparison -> . expr EQ expr
    (30) comparison -> . expr NEQ expr
    (31) comparison -> . expr
    (32) expr -> . NAME ASSIGN expr
    (33) expr -> . expr PLUS expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr TIMES expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr MOD expr
    (38) expr -> . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    NAME            shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 15
    LSQBRACK        shift and go to state 27
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NONE            shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    test                           shift and go to state 40
    comparison                     shift and go to state 16
    expr                           shift and go to state 20
    factor                         shift and go to state 24
    atom_expr                      shift and go to state 25
    atom                           shift and go to state 26
    name                           shift and go to state 28
    number                         shift and go to state 29
    string                         shift and go to state 30

state 14

    (12) print -> PRINT . LPAREN small_stmt RPAREN SEMICOLON

    LPAREN          shift and go to state 41


state 15

    (43) atom -> LPAREN . list_expr RPAREN
    (51) list_expr -> . list_expr COMMA atom_expr
    (52) list_expr -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    LPAREN          shift and go to state 15
    LSQBRACK        shift and go to state 27
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NONE            shift and go to state 33
    NAME            shift and go to state 44
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    STRING          shift and go to state 36

    list_expr                      shift and go to state 42
    atom_expr                      shift and go to state 43
    atom                           shift and go to state 26
    name                           shift and go to state 28
    number                         shift and go to state 29
    string                         shift and go to state 30

state 16

    (22) test -> comparison . OR test
    (23) test -> comparison . AND test
    (24) test -> comparison .

    OR              shift and go to state 45
    AND             shift and go to state 46
    SEMICOLON       reduce using rule 24 (test -> comparison .)
    COLON           reduce using rule 24 (test -> comparison .)
    RPAREN          reduce using rule 24 (test -> comparison .)


state 17

    (13) flow_stmt -> RETURN .

    SEMICOLON       reduce using rule 13 (flow_stmt -> RETURN .)
    RPAREN          reduce using rule 13 (flow_stmt -> RETURN .)


state 18

    (14) flow_stmt -> BREAK .

    SEMICOLON       reduce using rule 14 (flow_stmt -> BREAK .)
    RPAREN          reduce using rule 14 (flow_stmt -> BREAK .)


state 19

    (15) flow_stmt -> CONTINUE .

    SEMICOLON       reduce using rule 15 (flow_stmt -> CONTINUE .)
    RPAREN          reduce using rule 15 (flow_stmt -> CONTINUE .)


state 20

    (25) comparison -> expr . GT expr
    (26) comparison -> expr . LT expr
    (27) comparison -> expr . GTE expr
    (28) comparison -> expr . LTE expr
    (29) comparison -> expr . EQ expr
    (30) comparison -> expr . NEQ expr
    (31) comparison -> expr .
    (33) expr -> expr . PLUS expr
    (34) expr -> expr . MINUS expr
    (35) expr -> expr . TIMES expr
    (36) expr -> expr . DIVIDE expr
    (37) expr -> expr . MOD expr

    GT              shift and go to state 47
    LT              shift and go to state 48
    GTE             shift and go to state 49
    LTE             shift and go to state 50
    EQ              shift and go to state 51
    NEQ             shift and go to state 52
    OR              reduce using rule 31 (comparison -> expr .)
    AND             reduce using rule 31 (comparison -> expr .)
    SEMICOLON       reduce using rule 31 (comparison -> expr .)
    COLON           reduce using rule 31 (comparison -> expr .)
    RPAREN          reduce using rule 31 (comparison -> expr .)
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56
    MOD             shift and go to state 57


state 21

    (32) expr -> NAME . ASSIGN expr
    (53) name -> NAME .

    ASSIGN          shift and go to state 58
    GT              reduce using rule 53 (name -> NAME .)
    LT              reduce using rule 53 (name -> NAME .)
    GTE             reduce using rule 53 (name -> NAME .)
    LTE             reduce using rule 53 (name -> NAME .)
    EQ              reduce using rule 53 (name -> NAME .)
    NEQ             reduce using rule 53 (name -> NAME .)
    PLUS            reduce using rule 53 (name -> NAME .)
    MINUS           reduce using rule 53 (name -> NAME .)
    TIMES           reduce using rule 53 (name -> NAME .)
    DIVIDE          reduce using rule 53 (name -> NAME .)
    MOD             reduce using rule 53 (name -> NAME .)
    OR              reduce using rule 53 (name -> NAME .)
    AND             reduce using rule 53 (name -> NAME .)
    SEMICOLON       reduce using rule 53 (name -> NAME .)
    COLON           reduce using rule 53 (name -> NAME .)
    RPAREN          reduce using rule 53 (name -> NAME .)


state 22

    (39) factor -> PLUS . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

